src/test/deca/syntax/invalid/SansObjet/IfFaute.deca
//Description
//  test de melange field et expr dans methode
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input '{'

{
    If(true) {
        println("faute");
    }
}